--- a/FinalProjectFrontEnd/assets/css/style.css
+++ b/FinalProjectFrontEnd/assets/css/style.css
@@ -335,6 +335,7 @@ a{
 #catagory {
     display: flex;
     justify-content: center;
+    margin-bottom: 8rem;
 }
 
 #catagory h4{
@@ -780,10 +781,23 @@ li {
 
 .box {
     width: 100%;
+    transition: 0.3s;
+    transform: scale(.95);
+    overflow: hidden;
 }
 
 .box img {
     width: 100%;
+    transition: transform .3s ease-in-out;
+}
+
+.box:hover {
+    border: 2px solid rgba(0, 0, 0, 0.384);
+    transition: 0.3s;
+}
+
+.box:hover img {
+    transform: scale(1.15);
 }
 
 .catagory-sale {
@@ -1419,7 +1433,7 @@ margin-bottom: 2rem;
     border-left: 2px solid #262626;
     height: 150px;
     margin-right: 1rem;
-  }
+}
   
 
     #my-account {
@@ -1427,7 +1441,146 @@ margin-bottom: 2rem;
     }
 
 
+
+    .col {
+        display: block;
+        float:left;
+        margin: 1% 0 1% 1.6%;
+    }
+    
+    .col:first-of-type {
+      margin-left: 0;
+    }
+    
+    .containerrr{
+      width: 100%;
+      max-width: 940px;
+      margin: 0 auto;
+      position: relative;
+      text-align: center;
+    }
+    
+    /* CLEARFIX */
+    
+    .cf:before,
+    .cf:after {
+        content: " ";
+        display: table;
+    }
+    
+    .cf:after {
+        clear: both;
+    }
+    
+    .cf {
+        *zoom: 1;
+    }
+    
+    /* GENERAL STYLES */
+    
+    .pagination{
+      padding: 30px 0;
+      display: flex;
+      justify-content: center;
+    }
+    
+    .pagination ul{
+      margin: 0;
+      padding: 0;
+      list-style-type: none;
+    }
+    
+    .pagination a{
+      display: inline-block;
+      padding: 10px 18px;
+      color: #222;
+    }    
+
+    .twelve { 
+    width: 100%; 
+    }
+
+    .p12 a:first-of-type, .p12 a:last-of-type, .p12 .is-active{
+    background-color: #36b8ce;
+    color: #fff;
+    font-weight: bold;
+    }
+  
+
+    .pagination p{
+    font-size: 12px;
+    }
+
+    .pagination a{
+        font-size: 12px;
+    }
+
+    .pagination li{
+        font-size: 12px;
+    }
+
+
+    /* .add-btn {
+        width: 150px;
+        height: 40px;
+        margin: 20px 0;
+        border-radius: 3px;
+        border-color: #36b8ce;
+        color: #36b8ce;
+        transition: 0.2s;
+    }
+
+    .add-btn:hover {
+       
+        color: white;
+        background-color: #000;
+        border-color: white
+    }
+
+
+    .box:hover .product-hover {
+        left: 19%;
+        top: 0;
+        opacity: 100%;
+    }
+    
+
+    .product-hover{
+        position: absolute;
+        left: 0;
+        top: 0;
+        opacity: 0;
+        color: white;
+        background-color: rgba(0, 0, 0, 0.705);
+        border-color: #cccccc;
+        border: none;
+        width: 30px;
+        height: 30px;
+        transition: 1s;
+    } */
+
+
+    /* .product-hover:hover{
+        background-color: #36b8ce;
+        color: white;
+    } */
+
+   .video-sec {
+    width: 100%;
+   }
+
+   .video-sec video {
+    width: 100%;
+    height: 100%;
+   }
+  
+
+   
+
+
+
 @media (max-width: 450px) {
+
 
 .h-custom{
 height: 100%;
@@ -1444,7 +1597,15 @@ height: 100%;
     border-radius: 0 2px solid !important;
 }
 
+
+
+ .mobile-pagination {
+    display: none !important;
+} 
+
 }
+
+
 
 
 @media screen and (max-width:768px){
@@ -1496,8 +1657,8 @@ height: 100%;
 
 
    
-    .phone-search-page.actived{
-        /* display: block; */
+    /* .phone-search-page.actived{
+        
         left: 0;
     }
 
@@ -1521,7 +1682,7 @@ height: 100%;
         width: 100%;
         height: 60px;
 
-    }
+    } */
 
 
     .hamburger {
@@ -1541,10 +1702,15 @@ height: 100%;
     
     .left-header-bottom{
         display: none;
+       
     }
     
     .right-header-bottom{
         display: none;
+        width: 100% !important;
+        height: 100% !important;
+        z-index: 500 !important;
+        text-align: center;
     }
 
     .center-nav{
@@ -1631,6 +1797,7 @@ height: 100%;
    #catagory {
     display: block;
     overflow: hidden;
+    
    }
 
    .catagory-left{
@@ -1740,6 +1907,7 @@ height: 100%;
     display: block;
 }
 
+
 .full-basket{
     display: block;
 }
@@ -1846,3 +2014,12 @@ height: 100%;
 
 
   }
+
+  .active-for-search{
+    display: block;
+  }
+
+
+
+  
+
